# networking-cisco

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  TESTING.rst  doc-requirements.txt  openstack-common.conf  requirements.txt  setup.cfg  test-patches.txt  test-requirements-mitaka.txt  test-requirements.txt  tox.ini
devstack/: README.rst  plugin.sh  settings
devstack/asr1k/: README.TXT  asr1k_install_all.sh  cisco  cisco_neutron  ciscocfgagent  local.conf.asr1k  localrc.asr1k  setup_keystone_for_asr1k_l3.sh  setup_test_networks.sh
devstack/csr1kv/: README.TXT  cisco  cisco_fwaas  cisco_neutron  cisco_router  csr1kv_install_all.sh  local.conf.csr1kv_and_n1kv  localrc.csr1kv_and_n1kv  remove_csr1kv_hosting_devices.sh  setup_interface_on_extnet1_for_demo.sh  setup_keystone_for_csr1kv_l3.sh  setup_l3cfgagent_networking.sh  setup_neutron_for_csr1kv_l3.sh  setup_nova_and_glance_for_csr1kv_l3.sh  setup_test_networks.sh
devstack/inject_files/: cisco_device_manager_plugin.inject  cisco_router_plugin.inject
devstack/saf/: cisco_saf  local.conf.compute.saf  local.conf.control.saf
doc/: requirements.txt
doc/source/: conf.py  dummy.rst  index.rst  installation.rst  usage.rst
doc/source/admin/: index.rst  l3-asr1k.rst  ml2-nexus-troubleshoot.rst  ml2-nexus.rst  ml2-ucsm-troubleshoot.rst  ml2-ucsm.rst
doc/source/apps/: cpnr.rst  index.rst  saf.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst  ml2-nexus-vxlan-type-driver.rst  ml2-nexus.rst  ml2-ucsm.rst
doc/source/configuration/samples/: l3-asr1k.rst  ml2-nexus-vxlan-type-driver.rst  ml2-nexus.rst  (+1 more)
doc/source/contributor/: faq.rst  howto.rst  index.rst  l3-asr1k.rst  ml2-nexus.rst  ml2-ucsm.rst
doc/source/install/: cpnr.rst  howto.rst  index.rst  l3-asr1k.rst  ml2-nexus.rst  ml2-ucsm.rst  saf.rst
doc/source/reference/: index.rst  l3-asr1k.rst  ml2-nexus.rst  ml2-ucsm.rst  usage.rst
etc/: policy.json
etc/cpnr/: cisco_pnr.ini  rootwrap.conf
etc/init/: cpnr-dhcp-relay.conf  cpnr-dns-relay.conf
etc/neutron/rootwrap.d/: cisco-apic.filters
etc/oslo-config-generator/: cisco_router_plugin.ini  ml2_nexus.ini  ml2_nexus_vxlan_type_driver.ini  ml2_ucsm.ini
etc/saf/: enabler_conf.ini
etc/saf/init/: fabric-enabler-agent.conf  fabric-enabler-agent.service  fabric-enabler-server.conf  fabric-enabler-server.service
etc/systemd/system/: cpnr-dhcp-relay.service  cpnr-dns-relay.service
networking_cisco/: __init__.py  _i18n.py  backwards_compatibility.py
networking_cisco/apps/saf/: dfa_cli.py  dfa_enabler_agent.py  dfa_enabler_server.py
networking_cisco/backwards_compatibility/: __init__.py  attributes.py  constants.py  extensions.py  neutron_version.py  rpc.py  worker.py
networking_cisco/config/: base.py  opts.py
networking_cisco/ml2_drivers/apic/: README
networking_cisco/ml2_drivers/nexus/: config.py  constants.py  exceptions.py  mech_cisco_nexus.py  nexus_db_v2.py  nexus_helpers.py  nexus_models_v2.py  nexus_network_driver.py  nexus_restapi_client.py  nexus_restapi_network_driver.py  nexus_restapi_snippets.py  nexus_snippets.py  trunk.py  type_nexus_vxlan.py
networking_cisco/ml2_drivers/ucsm/: config.py  deprecated_network_driver.py  mech_cisco_ucsm.py  ucs_ssl.py  ucsm_db.py  ucsm_model.py  ucsm_network_driver.py
networking_cisco/neutronclient/: hostingdevice.py  hostingdevicescheduler.py  hostingdevicetemplate.py  networkprofile.py  policyprofile.py  routerscheduler.py  routertype.py
networking_cisco/services/l3_router/: l3_apic.py
networking_cisco/services/trunk/: nexus_trunk.py  trunkstubs.py
networking_cisco/tests/: base.py  test_compatibility.py  test_networking_cisco.py
networking_cisco/tests/ci/: cover.bash
networking_cisco_tempest_plugin/: README.rst  plugin.py
networking_cisco_tempest_plugin/tests/scenario/: test_ucsm_configuration.py
playbooks/networking-cisco-tox-master/: run.yaml
playbooks/networking-cisco-tox-newton/: run.yaml
playbooks/networking-cisco-tox-ocata/: run.yaml
playbooks/networking-cisco-tox-pike/: run.yaml
releasenotes/notes/: Mapping-DBDuplicateEntry-fix-992db50b17ecbe21.yaml  Mapping-DbDuplicateEntry-multictrl-b531dde46b9c214c.yaml  add-host-interface-map-table-6d8a5c1715ac035c.yaml  add_rocky_support-9627ef3c76405b8f.yaml  change-to-ucsmsdk-5e57c6b0e80ba334.yaml  deprecate-ncclient-driver-81db436a78249397.yaml  deprecate-old-ml2-cfg-doc-f25ee0903ace582d.yaml  dflt_replay_enabled-c7a60499266bd795.yaml  elim_MultiConfigParser_fr_nexus-6a50c543949d1ca4.yaml  enable-nexus-https-verify-29ca1192812deb5f.yaml  greenpool_traceback-7ceb08e183bac3cf.yaml  host-mapping-cfg-new-method-17063db7feb4ba97.yaml  improve-vpc_pool-config-690e1ca02479ef06.yaml  nexus-restapi-improvements-6a0f6771284a3610.yaml  nexus_followup_relnotes-4a91cc7e4f8c7377.yaml  nexus_trunk_support-cd12b7e7e59911a5.yaml  obfuscate-password-24c308c1efc68342.yaml  port-not-found-exception-3d2f47dc1298855c.yaml  provider_network-b564489765be1a9a.yaml  remove-csr1kv-routing-code-5f436f831c468b3a.yaml  remove-deprecated-host-if-map-cfg-5a4da411cb9f2433.yaml  remove-deprecated-intfcfg-portchannel-cfg-4ea97bd4b1459622.yaml  remove-n1kv-driver-code-428635c33a58a365.yaml  remove-ncclient-driver-1f527a60450aab40.yaml  remove-unused-config-4501b85d6043e674.yaml  remove_ncs-85a89eac7d93bb18.yaml  replace-dot-in-cfg-var-for-tripleo-5f0b1954567df3ac.yaml  replace-get-session-in-nexus-9ccd3c0c8d15d997.yaml  single-ucsm-vnic-sp-templates-c282733a496321fe.yaml  subnet_id_fk_const-f28230dc9aa4d32a.yaml  support_for_queens-6c2b67b426b6d5de.yaml  tripleo-puppet-users-notice-e812a95b7cd79ac7.yaml  trunk-no-support-in-newton-fix-dbf02e6d10e22361.yaml  ucsm-https-verify-ebfe8d1921d52035.yaml  ucsm_auto_detection_of_compute_hosts-28b26f712f2b9b3b.yaml
releasenotes/source/: Makefile  conf.py  index.rst  make.bat  mitaka.rst  newton.rst
tools/: add_neutron_patches.sh  check_for_upstream_updates.sh  generate_config_file_samples.sh  misc-sanity-checks.sh  saf_prepare_setup.py  shim-change-ids  tox_install.sh
(+336 files in other folders)
