[metadata]
name = networking-cisco
version = 2015.1.1
summary = Networking Cisco contains the Cisco vendor code for Openstack Neutron
description-file =
    README.rst
author = Cisco Systems
author-email = openstack-networking@cisco.com
home-page = http://git.openstack.org/cgit/stackforge/networking-cisco
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    networking_cisco
data_files =
    etc/neutron =
        etc/neutron/plugins/ml2/ml2_conf_cisco.ini
        etc/neutron/plugins/ml2/ml2_conf_ncs.ini
        etc/neutron/plugins/cisco/cisco_cfg_agent.ini
        etc/neutron/plugins/cisco/cisco_plugins.ini
        etc/neutron/plugins/cisco/cisco_router_plugin.ini
        etc/neutron/plugins/cisco/cisco_vpn_agent.ini

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    neutron-cisco-cfg-agent = networking_cisco.plugins.cisco.cfg_agent.cfg_agent:main
neutron.core_plugins =
    cisco = neutron.plugins.cisco.network_plugin:PluginV2
    ml2 = neutron.plugins.ml2.plugin:Ml2Plugin
neutron.ml2.mechanism_drivers =
    # Note: ncs and cisco_ncs point to the same driver entrypoint
    # TODO: The old name (ncs) can be dropped when it is no longer used
    ncs = neutron.plugins.ml2.drivers.cisco.ncs.driver:NCSMechanismDriver
    cisco_ncs = neutron.plugins.ml2.drivers.cisco.ncs.driver:NCSMechanismDriver
    cisco_nexus = neutron.plugins.ml2.drivers.cisco.nexus.mech_cisco_nexus:CiscoNexusMechanismDriver
    cisco_apic = neutron.plugins.ml2.drivers.cisco.apic.mechanism_apic:APICMechanismDriver
    cisco_n1kv = neutron.plugins.ml2.drivers.cisco.n1kv.mech_cisco_n1kv:N1KVMechanismDriver
neutron.service_plugins =
    cisco_n1kv_profile = networking_cisco.plugins.ml2.drivers.cisco.n1kv.policy_profile_service:PolicyProfilePlugin
neutron.ml2.extension_drivers =
    cisco_n1kv_ext = neutron.plugins.ml2.drivers.cisco.n1kv.n1kv_ext_driver:CiscoN1kvExtensionDriver
    cisco_ucsm = neutron.plugins.ml2.drivers.cisco.ucsm.mech_cisco_ucsm:CiscoUcsmMechanismDriver

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_cisco/locale/networking-cisco.pot

[compile_catalog]
directory = networking_cisco/locale
domain = networking-cisco

[update_catalog]
domain = networking-cisco
output_dir = networking_cisco/locale
input_file = networking_cisco/locale/networking-cisco.pot

[wheel]
universal = 1
