[metadata]
name = networking-cisco
summary = Networking Cisco contains drivers for OpenStack Neutron to support Cisco equipment and products
description-file =
    README.rst
author = Cisco Systems
author-email = openstack-networking@cisco.com
home-page = https://github.com/openstack/networking-cisco
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    networking_cisco
    networking_cisco_tempest_plugin
data_files =
    etc/neutron =
        etc/neutron/plugins/ml2/ml2_conf_cisco.ini
        etc/neutron/plugins/cisco/cisco_cfg_agent.ini
        etc/neutron/plugins/cisco/cisco_device_manager_plugin.ini
        etc/neutron/plugins/cisco/cisco_router_plugin.ini
   etc/saf =
        etc/saf/enabler_conf.ini
   etc/saf/init =
        etc/saf/init/fabric-enabler-server.conf
        etc/saf/init/fabric-enabler-server.service
        etc/saf/init/fabric-enabler-agent.conf
        etc/saf/init/fabric-enabler-agent.service
    etc/systemd/system =
        etc/systemd/system/cpnr-dhcp-relay.service
        etc/systemd/system/cpnr-dns-relay.service
    lib/systemd/system =
        etc/systemd/system/cpnr-dhcp-relay.service
        etc/systemd/system/cpnr-dns-relay.service
    etc/init =
        etc/init/cpnr-dhcp-relay.conf
        etc/init/cpnr-dns-relay.conf
    etc/cpnr =
        etc/cpnr/rootwrap.conf
        etc/cpnr/cisco_pnr.ini
    usr/share/cpnr/rootwrap =
        usr/share/cpnr/rootwrap/cpnr.filters

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    neutron-cisco-cfg-agent = networking_cisco.plugins.cisco.cfg_agent.cfg_agent:main
    fabric-enabler-server = networking_cisco.apps.saf.dfa_enabler_server:dfa_server
    fabric-enabler-agent = networking_cisco.apps.saf.dfa_enabler_agent:dfa_agent
    fabric-enabler-cli = networking_cisco.apps.saf.dfa_cli:dfa_cli
    cpnr-dhcp-relay = networking_cisco.plugins.cisco.cpnr.cpnr_dhcp_relay_service:main
    cpnr-dhcp-relay-agent= networking_cisco.plugins.cisco.cpnr.cpnr_dhcp_relay_agent:main
    cpnr-dns-relay = networking_cisco.plugins.cisco.cpnr.cpnr_dns_relay_service:main
    cpnr-dns-relay-agent  = networking_cisco.plugins.cisco.cpnr.cpnr_dns_relay_agent:main
    cpnr-rootwrap = oslo_rootwrap.cmd:main

neutron.ml2.type_drivers =
    nexus_vxlan = networking_cisco.ml2_drivers.nexus.type_nexus_vxlan:NexusVxlanTypeDriver
neutron.ml2.mechanism_drivers =
    cisco_nexus = networking_cisco.ml2_drivers.nexus.mech_cisco_nexus:CiscoNexusMechanismDriver
    cisco_ucsm = networking_cisco.ml2_drivers.ucsm.mech_cisco_ucsm:CiscoUcsmMechanismDriver

# Service Plugins
neutron.service_plugins =
    cisco_device_manager = networking_cisco.plugins.cisco.service_plugins.cisco_device_manager_plugin:CiscoDeviceManagerPlugin
    cisco_l3_routing = networking_cisco.plugins.cisco.service_plugins.cisco_router_plugin:CiscoRouterPlugin

# Extension Drivers
neutron.ml2.extension_drivers =
    cisco_providernet_ext = networking_cisco.ml2_drivers.nexus.extensions.cisco_providernet:CiscoProviderNetDriver
neutron.db.alembic_migrations =
    networking-cisco = networking_cisco.db.migration:alembic_migrations

# Extensions to neutronclient
neutronclient.extension =
    hosting_devices = networking_cisco.neutronclient.hostingdevice
    hosting_device_scheduler = networking_cisco.neutronclient.hostingdevicescheduler
    hosting_device_templates = networking_cisco.neutronclient.hostingdevicetemplate
    router_scheduler = networking_cisco.neutronclient.routerscheduler
    router_types = networking_cisco.neutronclient.routertype
    policy_profile = networking_cisco.neutronclient.policyprofile
    network_profile = networking_cisco.neutronclient.networkprofile

networking_cisco.ml2.nexus_driver =
    ncclient = networking_cisco.ml2_drivers.nexus.nexus_network_driver:CiscoNexusSshDriver
    restapi = networking_cisco.ml2_drivers.nexus.nexus_restapi_network_driver:CiscoNexusRestapiDriver

# Extension Firewall drivers for SAF
services.firewall.native.drivers =
    native = networking_cisco.apps.saf.server.services.firewall.native.drivers.native:NativeFirewall
    phy_asa = networking_cisco.apps.saf.server.services.firewall.native.drivers.phy_asa:PhyAsa

tempest.test_plugins =
    networking_cisco_tempest_plugin = networking_cisco_tempest_plugin.plugin:NetworkingCiscoTempestPlugin

oslo.config.opts =
    networking_cisco.nexus = networking_cisco.config.opts:list_nexus_conf_opts
    networking_cisco.nexus_vxlan_type_driver = networking_cisco.config.opts:list_nexus_vxlan_type_driver_conf_opts
    networking_cisco.ucsm = networking_cisco.config.opts:list_ucsm_conf_opts

[pbr]
autodoc_index_modules = True
autodoc_exclude_modules =
    networking_cisco.db.migration.alembic_migrations.env
    networking_cisco.db.migration.alembic_migrations.versions.*
    networking_cisco.plugins.cisco.cpnr.dhcp_driver
    networking_cisco.plugins.cisco.cpnr.model
    networking_cisco.tests.unit.cisco.cpnr.fake_networks
    networking_cisco.tests.unit.cisco.cpnr.test_model
    networking_cisco.plugins.cisco.db.l3.l3_router_appliance_db
    networking_cisco.plugins.cisco.l3.drivers.asr1k.asr1k_routertype_driver
    networking_cisco.plugins.cisco.service_plugins.cisco_router_plugin
    networking_cisco.tests.unit.cisco.device_manager.test_aci_vlan_trunking_driver
    networking_cisco.tests.unit.cisco.device_manager.test_hw_vlan_trunking_plugging_driver
    networking_cisco.tests.unit.cisco.l3.*
    networking_cisco_tempest_plugin.*
api_doc_dir = contributor/api

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_cisco/locale/networking-cisco.pot

[compile_catalog]
directory = networking_cisco/locale
domain = networking-cisco

[update_catalog]
domain = networking-cisco
output_dir = networking_cisco/locale
input_file = networking_cisco/locale/networking-cisco.pot

[wheel]
universal = 1
